my-project/app.yml
apiVersion: v1
kind: Service
metadata:
  namespace: my-namespace
  name: my-service
spec:
  type: NodePort
  ports:
    - nodePort: 31112
      port: 8080
      targetPort: 8080
  selector:
    env: my-env
---
apiVersion: v1
kind: Pod
metadata:
  namespace: my-namespace
  name: my-pod
  labels:
    env: my-env
spec:
  containers:
    - image: nigelpoulton/k8sbook:shield-01
      name: my-container
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
