my-project/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-test
  labels:
    chapter: services
spec:
  # ipFamilyPolicy: PreferDualStack
  # ipFamilies:
  # - IPv4
  # - IPv6
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30001
      targetPort: 3000
      protocol: TCP
  selector:
    chapter: services
