my-project/sample-ingress.yml
# Needs ingress controller https://kubernetes.github.io/ingress-nginx/deploy/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample-app
  labels:
    app: sample-app
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-sample-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-sample-app
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-sample-app
  labels:
    app: sample-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app: sample-app
---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: pod-sample-app
#   labels:
#     env: sample-app
# spec:
#   containers:
#     - image: gregorymichaelroman/sample-app:latest
#       name: ctr-sample-app
#       ports:
#         - containerPort: 3000
#       imagePullPolicy: Always
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: svc-sample-app
#   labels:
#     chapter: services
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080 # Exposed Port
#       # nodePort: 30001
#       targetPort: 3000 # Application Port
#       protocol: TCP
#   selector:
#     chapter: services
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-js-app
          image: gregorymichaelroman/sample-app:latest
          ports:
            - containerPort: 3000
